<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event_Page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="408dp"
        android:layout_height="742dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/event1"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event1"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/event2"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event2"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event1" />

        <Button
            android:id="@+id/event3"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event3"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event2" />

        <Button
            android:id="@+id/event4"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event4"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event3" />

        <Button
            android:id="@+id/event5"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event5"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event4" />

        <Button
            android:id="@+id/event6"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event6"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event5" />

        <Button
            android:id="@+id/event9"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginBottom="212dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event9"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/event10"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event10"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event9" />

        <Button
            android:id="@+id/event8"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event8"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.586"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event7" />

        <Button
            android:id="@+id/event7"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/event7"
            android:textColor="#020000"
            android:textSize="18dp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="10dp"
            app:iconTint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.586"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event6" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="360dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"></LinearLayout>

        <TextView
            android:id="@+id/attendance_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="48dp"
            android:text="@string/events_txt"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>